<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_catalogo">

    <fragment
        android:id="@+id/nav_catalogo"
        android:name="com.example.wallapop.ui.Catalogo.CatalogoFragment"
        android:label="@string/menu_catalogo"
        tools:layout="@layout/fragment_catalogo" />

    <fragment
        android:id="@+id/nav_productos"
        android:name="com.example.wallapop.ui.Productos.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.example.wallapop.ui.Historial.HistorialFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.example.wallapop.ui.Favoritos.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.wallapop.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.wallapop.ui.Send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_historial" />
</navigation>