<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_catalogo"
            android:icon="@drawable/ic_carrito"
            android:title="@string/menu_catalogo" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_historial"
            android:title="@string/menu_historial" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_favoritos"
            android:title="@string/menu_favoritos" />
    </group>



</menu>
