<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"

                                                   android:layout_height="match_parent">
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ImageView
            android:id="@+id/imgInsertarProducto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            tools:srcCompat="@drawable/ic_menu_send" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbInsertarImagen"
            style="@android:style/Widget.Material.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"

            android:backgroundTint="#EE3C3737"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_camera"
            app:backgroundTint="#EE3C3737"
            app:rippleColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/imgInsertarProducto" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"/>

    <EditText
            android:id="@+id/etInsertarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/nombre"
            app:layout_constraintTop_toBottomOf="@+id/fbInsertarImagen"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="9dp"/>

    <EditText
            android:id="@+id/etInsertarPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/precio"
            android:ems="10"
            android:inputType="numberSigned" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etInsertarNombre" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/etInsertarDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/descripcion"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etInsertarPrecio" app:layout_constraintStart_toStartOf="parent"
    />

    <Button
            android:text="@string/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnInsertarAceptar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp"
            android:background="@color/colorPrimary" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/btnInsertarMapa"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:textColor="@color/colorBlanco"/>
    <Button
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnInsertarCancelar"
            app:layout_constraintEnd_toStartOf="@+id/btnInsertarAceptar"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="87dp" app:layout_constraintHorizontal_bias="0.0"
            android:background="@color/colorPrimary" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/btnInsertarMapa" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/colorBlanco"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnInsertarFecha"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seleccionar"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:icon="@drawable/ic_calendario"
            app:layout_constraintStart_toEndOf="@+id/etInsertarFecha"
            app:layout_constraintEnd_toEndOf="@+id/etInsertarDescripcion" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etInsertarDescripcion" android:layout_marginStart="24dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnInsertarMapa"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seleccionarUbicacion"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:icon="@drawable/ic_location_on_black_24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnInsertarFecha"
            app:layout_constraintEnd_toEndOf="@+id/btnInsertarFecha"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etInsertarFecha"
            android:hint="@string/fecha"
            app:layout_constraintStart_toStartOf="@+id/etInsertarDescripcion" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etInsertarDescripcion"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvVendedor"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnInsertarAceptar" android:layout_marginTop="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</LinearLayout>