<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Login.RegistrarFragment"
        android:background="@color/colorBlanco">


    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/relative"
            android:background="@drawable/background_plano">
        <ImageView
                android:src="@drawable/ic_person_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/imageView4"/>
    </RelativeLayout>
    <TextView
            android:text="@string/introducirUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvRegistroUsuario"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/relative" android:layout_marginTop="16dp"/>
    <androidx.cardview.widget.CardView android:layout_width="0dp" android:layout_height="wrap_content"
                                       app:cardCornerRadius="20dp"
                                       app:cardElevation="0dp"
                                       app:cardBackgroundColor="@color/colorCardViewBackground"
                                       android:id="@+id/cardViewLoginUsuario"
                                       app:layout_constraintStart_toStartOf="parent"
                                       android:layout_marginStart="15dp" app:layout_constraintEnd_toEndOf="parent"
                                       android:layout_marginEnd="15dp" android:layout_marginTop="16dp"
                                       app:layout_constraintTop_toBottomOf="@+id/tvRegistroUsuario">


        <ImageView
                android:src="@drawable/ic_person_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/imageView6"
                android:layout_marginTop="7dp" android:layout_marginLeft="3dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etRegistrarUsuario"
                android:hint="@string/usuario"
                android:paddingLeft="40dp"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
        />

    </androidx.cardview.widget.CardView>

    <TextView
            android:text="@string/introducirEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvRegistroEmail"
            app:layout_constraintTop_toBottomOf="@+id/cardViewLoginUsuario" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp"
            android:textColor="@color/colorPrimary"/>

    <androidx.cardview.widget.CardView android:layout_width="0dp" android:layout_height="wrap_content"
                                       app:cardCornerRadius="20dp"
                                       app:cardElevation="0dp"
                                       app:cardBackgroundColor="@color/colorCardViewBackground"
                                       app:layout_constraintStart_toStartOf="parent"
                                       app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="15dp"
                                       android:layout_marginStart="15dp" android:id="@+id/cardView3"
                                       android:layout_marginTop="16dp"
                                       app:layout_constraintTop_toBottomOf="@+id/tvRegistroEmail">

        <ImageView
                android:src="@drawable/ic_email"
                android:layout_width="25dp"
                android:layout_height="30dp" android:id="@+id/imageView7" android:layout_marginLeft="8dp"
                android:layout_marginTop="7dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etRegistrarEmail"
                android:hint="@string/email"
                android:background="@null"
                android:paddingLeft="45dp"
        />
    </androidx.cardview.widget.CardView>
    <TextView
            android:text="@string/introducirContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvRegistroContraseña"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp"
            android:textColor="@color/colorPrimary"/>
    <androidx.cardview.widget.CardView android:layout_width="0dp" android:layout_height="wrap_content"
                                       app:cardCornerRadius="20dp"
                                       app:cardElevation="0dp"
                                       app:cardBackgroundColor="@color/colorCardViewBackground"

                                       app:layout_constraintStart_toStartOf="parent"
                                       app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="15dp"
                                       android:layout_marginStart="15dp"
                                       app:layout_constraintHorizontal_bias="0.0"
                                       android:layout_marginTop="16dp"
                                       app:layout_constraintTop_toBottomOf="@+id/tvRegistroContraseña"
                                       android:id="@+id/cardView4">

        <ImageView
                android:src="@drawable/ic_password"
                android:layout_width="25dp"
                android:layout_height="25dp" android:id="@+id/imageView8" android:layout_marginTop="7dp"
                android:layout_marginLeft="3dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etRegistrarContraseña"
                android:hint="@string/contraseña"
                android:background="@null"
                android:paddingLeft="45dp"
        />
    </androidx.cardview.widget.CardView>
    <Button
            android:text="@string/registrarse"
            android:layout_width="200dp"
            android:layout_height="48dp" android:id="@+id/btnRegistrarAceptar"
            android:background="@drawable/background"
            android:textColor="@color/colorBlanco" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
