<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Login.LoginActivity"
        android:id="@+id/containerLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:textAlignment="center" android:id="@+id/constraintLogin">


        <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp" app:srcCompat="@drawable/ic_carro_de_la_compra"
                android:id="@+id/imgLoginLogotipo" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:text="@string/bienvenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvLoginBienvenido"
                android:layout_marginTop="31dp"
                app:layout_constraintTop_toBottomOf="@+id/imgLoginLogotipo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black_overlay" android:textSize="30sp"/>
        <androidx.cardview.widget.CardView android:layout_width="0dp" android:layout_height="wrap_content"
                                           app:cardCornerRadius="20dp"
                                           app:cardElevation="0dp"
                                           app:cardBackgroundColor="@color/colorCardViewBackground"
                                           app:layout_constraintTop_toBottomOf="@+id/tvLoginBienvenido"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
                                           android:id="@+id/cardViewLoginUsuario"
                                           android:layout_marginEnd="15dp" android:layout_marginStart="15dp">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_person_black_24dp"
                    android:id="@+id/imgUserLogin" android:layout_marginLeft="3dp" android:layout_marginTop="7dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etRegistrarUsuario"
                    android:hint="@string/usuario"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:paddingLeft="35dp"/>

        </androidx.cardview.widget.CardView>
        <TextView
                android:text="@string/entrar"
                android:layout_width="200dp"
                android:layout_height="40dp" android:id="@+id/btnEntrar"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/background"
                android:layout_marginEnd="15dp" android:layout_marginTop="76dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewLoginContraseña"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp"
                android:textColor="@color/colorBlanco" android:textAlignment="center" android:gravity="center"/>
        <TextView
                android:text="@string/registrarse"
                android:layout_width="100dp"
                android:layout_height="wrap_content" android:id="@+id/tvRegistrarse"

                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewLoginContraseña" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp" android:textColor="@color/colorPrimary"/>

        <androidx.cardview.widget.CardView android:layout_width="0dp" android:layout_height="wrap_content"
                                           app:cardCornerRadius="20dp"
                                           app:cardElevation="0dp"
                                           app:cardBackgroundColor="@color/colorCardViewBackground"

                                           app:layout_constraintTop_toBottomOf="@+id/cardViewLoginUsuario"
                                           app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                                           app:layout_constraintEnd_toEndOf="parent" android:id="@+id/cardViewLoginContraseña"
                                           android:layout_marginStart="15dp" android:layout_marginEnd="15dp">

            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp" app:srcCompat="@drawable/ic_password"
                    android:id="@+id/imgContraseñaLogin" android:layout_marginLeft="3dp" android:layout_marginTop="7dp"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/etContraseña"
                    android:hint="@string/contraseña"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:paddingLeft="35dp"></EditText>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>